[package]
name = "julia"
version = "0.1.0"
authors = ["dustinryan-roepsch"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
num = "0.4.0"
image = "0.23.14"
palette = "0.5.0"
rayon = "1.5.0"
indicatif = {version = "0.15.0", features = ["rayon"]}